[gd_scene load_steps=5 format=2]

[ext_resource path="res://kitchen/kitchen.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/gameplay.gd" type="Script" id=2]
[ext_resource path="res://customer/customer.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 11, 367, 0, 0, 0, 0, 4, 594, 0, 0, 0, 0, 1268, 594, 0, 0, 0, 0, 1260, 367, 0, 0, 0, 0, 11, 367 )
}

[node name="Node" type="Node"]
script = ExtResource( 2 )
customer_node = ExtResource( 3 )

[node name="Node" parent="." instance=ExtResource( 1 )]

[node name="customerTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="Path2D"]
position = Vector2( 11, 367 )
rotation = 1.60162

[connection signal="timeout" from="customerTimer" to="." method="_on_customerTimer_timeout"]
